test/corpus/block.txt
===
block.txt
===

import log : fn (I32) -> Unit from log

fn main() {
  let x = { 1 };
  log(x);

  let x = {
    x + 1
  };
  log(x);

  let x = {
    let x = 3;
    set x = x + 1;
    x
  };
  log(x);
}


---

(source_file
  (top_import
    (lower_ident)
    (ty_func
      (ty_i32)
      (ty_unit))
    (lower_ident))
  (top_func
    (lower_ident)
    (func_params)
    (block_e
      (let_decl
        (lower_ident)
        (block_e
          (expr_decl
            (int_lit))))
      (expr_decl
        (call_e
          (var_e
            (lower_ident))
          (call_args
            (var_e
              (lower_ident)))))
      (let_decl
        (lower_ident)
        (block_e
          (expr_decl
            (binary_e
              (var_e
                (lower_ident))
              (int_lit)))))
      (expr_decl
        (call_e
          (var_e
            (lower_ident))
          (call_args
            (var_e
              (lower_ident)))))
      (let_decl
        (lower_ident)
        (block_e
          (let_decl
            (lower_ident)
            (int_lit))
          (set_decl
            (set_var
              (lower_ident))
            (binary_e
              (var_e
                (lower_ident))
              (int_lit)))
          (expr_decl
            (var_e
              (lower_ident)))))
      (expr_decl
        (call_e
          (var_e
            (lower_ident))
          (call_args
            (var_e
              (lower_ident))))))))
